<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Admin">

    <TextView
        android:id="@+id/admin_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_player"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/admin_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <EditText
        android:id="@+id/admin_remove_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/admin_add_title"
        android:layout_marginBottom="178dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor,RtlCompat"
        tools:targetApi="cupcake"
        android:layout_alignLeft="@+id/admin_add_title" />

    <EditText
        android:id="@+id/admin_add_input"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/admin_add_name"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/admin_remove_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/admin_add_title"
        android:layout_marginBottom="63dp"
        android:text="@string/remove"
        android:layout_alignLeft="@+id/admin_add_title" />

    <Button
        android:id="@+id/admin_add_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/admin_remove_input"
        android:layout_below="@+id/admin_add_status"
        android:text="@string/add"
        android:layout_alignLeft="@+id/admin_remove_input" />

    <TextView
        android:id="@+id/admin_remove_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Remove Player"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/admin_remove_status"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/admin_add_title"
        android:layout_marginBottom="130dp"
        android:text="@string/none"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"
        android:layout_alignLeft="@+id/admin_add_title" />

    <TextView
        android:id="@+id/admin_add_status"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/admin_remove_input"
        android:layout_below="@+id/admin_add_input"
        android:text="@string/none"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"
        android:layout_alignLeft="@+id/admin_remove_input" />

    <TextView
        android:id="@+id/admin_status_add_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/admin_add_name"
        android:layout_below="@+id/admin_add_input"
        android:text="@string/status"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"
        android:layout_alignLeft="@+id/admin_add_name" />

    <TextView
        android:id="@+id/admin_remove_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/admin_add_name"
        android:layout_alignTop="@+id/admin_remove_input"
        android:text="@string/name"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"
        android:layout_alignLeft="@+id/admin_add_name" />

    <TextView
        android:id="@+id/admin_status_remove_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/admin_add_name"
        android:layout_alignTop="@+id/admin_remove_status"
        android:text="@string/status"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap"
        android:layout_alignLeft="@+id/admin_add_name" />

</RelativeLayout>